PR/58298: Convert hyperv_hypercall_page to naked function.